video player appears, with auth fields
deleted useless video-player component, put {{outlet}} back into
my-application

--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -27,6 +27,8 @@
   {{flash-message flash=flash}}
 {{/each}}
 
+{{outlet}}
+
 <div class="col-md-8 col-md-offset-2">
   {{ember-youtube ytid="g3a4jA0jfrk"}}
 </div>
