change templates to send changeVideo
send action now sends ytid up from youtube-finder

--- a/app/components/ember-youtube/template.hbs
+++ b/app/components/ember-youtube/template.hbs
@@ -1,4 +1,5 @@
 <div id="EmberYoutube-player"></div>
+{{youtube-finder changeVideo='changeVideo'}}
 
 {{#if showExtras}}
 	<div class="EmberYoutube-extras">
