--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -21,7 +21,7 @@
   </div>
 </nav>
 
-<h1>Welcome to You-Riff!</h1>
+<h1>Welcome to YouRiff!</h1>
 
 {{#each flashMessages.queue as |flash|}}
   {{flash-message flash=flash}}
