changeVideo functional again
bound ytid to component, defaults to Anthony Bordain

--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -30,5 +30,6 @@
 {{outlet}}
 
 <div class="col-md-8 col-md-offset-2">
-  {{ember-youtube ytid="g3a4jA0jfrk"}}
+  {{ember-youtube ytid=ytid}}
+  {{youtube-finder changeVideo='changeVideo'}}
 </div>
