--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -1,3 +1,10 @@
+<div class="container">
+    <div class="row">
+        <div class="col-md-10">{{ember-youtube ytid=ytid}}</div>
+        <div class="col-md-2">{{chat-box}}</div>
+    </div>
+    <div class="row"></div>
+</div>
 
-{{ember-youtube ytid=ytid}}
+
 {{youtube-finder changeVideo='changeVideo'}}
