add button to transition to video route
I think it'll work?

--- a/app/videos/template.hbs
+++ b/app/videos/template.hbs
@@ -1,3 +1,4 @@
 {{#each model as |video|}}
   {{ember-youtube ytid=video.ytid}}
+  <button {{action 'openVideo' video}}>Riff on this!</button>
 {{/each}}
