/videos/:video_id now loads video correctly!
index is broken though...

--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-10">{{ember-youtube ytid=ytid}}</div>
+        <div class="col-md-10">{{ember-youtube ytid=video.ytid}}</div>
         <div class="col-md-2">{{chat-box}}</div>
     </div>
     <div class="row"></div>
@@ -8,3 +8,5 @@
 
 
 {{youtube-finder changeVideo='changeVideo'}}
+
+hi
