add route for riffs... doesn't render

--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-10">{{ember-youtube ytid=video.ytid}}</div>
-        <div class="col-md-2">{{chat-box}}</div>
+        <div class="col-md-2">{{chat-box video=video}}</div>
     </div>
     <div class="row"></div>
 </div>
@@ -9,4 +9,4 @@
 
 {{youtube-finder changeVideo='changeVideo'}}
 
-hi
+{{!-- {{video}} --}}
