edit components so riffs appear inside chat-box
cannot retrieve currentTime...

--- a/app/components/chat-box/template.hbs
+++ b/app/components/chat-box/template.hbs
@@ -1,5 +1,7 @@
 <div class='chat-box'>
-  {{#each video.riffs as |riff|}}
-    Hi I'm a riff
-  {{/each}}
+  <ol>
+    {{#each video.riffs as |riff|}}
+      <li>'{{riff.user.email}}: {{riff.text}}'</li>
+    {{/each}}
+  </ol>
 </div>
