--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-10">{{ember-youtube ytid=video.ytid}}</div>
+        <div class="col-md-10">{{ember-youtube ytid=video.ytid timeChanged='timeChanged'}}</div>
         <div class="col-md-2">{{chat-box video=video}}</div>
     </div>
     <div class="row"></div>
