riff-component now renders email, text, and stamp
definitely need to work on styling, but oh well

--- a/app/components/riff-component/template.hbs
+++ b/app/components/riff-component/template.hbs
@@ -1,4 +1,1 @@
-{{ember-youtube ytid=riff.video.ytid startSeconds=riff.stamp}}
-
-
-{{riff.user.email}}: {{riff.text}}
+{{riff.user.email}}: {{riff.text}} -- @{{riff.stamp}} seconds
