add button to edit riffs
need to wrap in form, add actions

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,3 +6,13 @@
   overflow: scroll;
   width: 100%;
 }
+
+.edit-riff-box {
+  height: 440px;
+  width: 100%;
+}
+
+.edit-riff-btn {
+  height: 31px;
+  margin-top: 100;
+}
