--- a/app/riff/template.hbs
+++ b/app/riff/template.hbs
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-10">{{ember-youtube ytid=model.video.ytid timeChanged='timeChanged'}}</div>
-        <div class="col-md-2">{{riff-component riff=model}}</div>
+        <div class="col-md-2">
+          {{input class="edit-riff-box" value=model.text}}
+          <button class="btn btn-submit edit-riff-btn">Submit</button>
+        </div>
     </div>
     <div class="row"></div>
 </div>
