refactor edit riff form into edit-riff-panel
now attach action handler, send up to riff route

--- a/app/riff/template.hbs
+++ b/app/riff/template.hbs
@@ -2,8 +2,7 @@
     <div class="row">
         <div class="col-md-10">{{ember-youtube ytid=model.video.ytid timeChanged='timeChanged'}}</div>
         <div class="col-md-2">
-          {{input class="edit-riff-box" value=model.text}}
-          <button class="btn btn-submit edit-riff-btn">Submit</button>
+          {{edit-riff-panel riff=model}}
         </div>
     </div>
     <div class="row"></div>
