edit riff cancel now functional

--- a/app/components/edit-riff-panel/template.hbs
+++ b/app/components/edit-riff-panel/template.hbs
@@ -1,4 +1,5 @@
 <form {{action 'save' on='submit'}}>
   {{input class="edit-riff-box" placeholder="Edit your riff here!" value=riff.text}}
   <button type="submit" class="btn btn-submit edit-riff-btn">Submit</button>
+  <button {{action 'cancel'}} class='btn cancel-riff-btn btn-danger'>Cancel</button>
 </form>
