--- a/app/riff/template.hbs
+++ b/app/riff/template.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-10">{{ember-youtube ytid=model.video.ytid timeChanged='timeChanged'}}</div>
         <div class="col-md-2">
-          {{edit-riff-panel riff=model save='save'}}
+          {{edit-riff-panel riff=model save='save' cancel='cancel'}}
         </div>
     </div>
     <div class="row"></div>
