deleting riffs now successful!
needed to wrap destroyRecord in a .then coming off of destroyRecord.
Now immediately transitions to associated video when deleting a riff

--- a/app/components/edit-riff-panel/template.hbs
+++ b/app/components/edit-riff-panel/template.hbs
@@ -2,5 +2,5 @@
   {{textarea class="edit-riff-box" placeholder="Edit your riff here!" value=riff.text}}
   <button type="submit" class="btn btn-submit edit-riff-btn">Submit</button>
   <button {{action 'cancel'}} class='btn cancel-riff-btn'>Cancel</button>
-  <button {{action 'delete'}} class='btn delete-riff-btn btn-danger'>Delete</button>
+  <button {{action 'deleteRiff'}} class='btn delete-riff-btn btn-danger'>Delete</button>
 </form>
