riffs now appear in the chat-box as video plays
struggled for awhile with computed property types...
sometimes stamp was an object? Needed to call this.get('riff').('stamp')
rather than this.get('stamp')

--- a/app/components/chat-box/template.hbs
+++ b/app/components/chat-box/template.hbs
@@ -1,7 +1,7 @@
 <div class='chat-box'>
   <ol>
     {{#each video.riffs as |riff|}}
-      <li>'{{riff.user.email}}: {{riff.text}}'</li>
+        {{riff-component riff=riff currentTime=currentTime}}
     {{/each}}
   </ol>
 </div>
