--- a/app/components/riff-component/template.hbs
+++ b/app/components/riff-component/template.hbs
@@ -1,1 +1,3 @@
-{{riff.user.email}}: {{riff.text}} -- @{{riff.stamp}} seconds
+{{#if isDisplayed}}
+  {{riff.user.email}}: {{riff.text}} -- @{{riff.stamp}} seconds
+{{/if}}
