--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">{{ember-youtube ytid=video.ytid timeChanged='timeChanged'}}</div>
-        <div class="col-md-4">{{chat-box video=video}}</div>
+        <div class="col-md-4">{{chat-box video=video currentTime=currentTime}}</div>
     </div>
     <div class="row"></div>
 </div>
