--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,8 +2,13 @@
 @import 'bootstrap/theme';
 
 .chat-box {
+  -moz-appearance: textfield-multiline;
+  -webkit-appearance: textarea;
+  border: 1px solid gray;
   height: 475px;
-  overflow: scroll;
+  overflow: auto;
+  padding: 2px;
+  resize: both;
   width: 100%;
 }
 
