--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,6 +12,16 @@
   width: 100%;
 }
 
+.create-riff-box {
+  height: 33px;
+  margin-top: 1px;
+  width: 60%
+}
+
+.create-riff-btn {
+  margin-top: -25px;
+}
+
 .edit-riff-box {
   height: 440px;
   overflow: auto;
