--- a/app/components/chat-box/template.hbs
+++ b/app/components/chat-box/template.hbs
@@ -6,6 +6,6 @@
   </ol>
 </div>
 <form {{action 'createRiff' on='submit'}}>
-  {{textarea value=riff.text placeholder="Type your riff here!" class="create-riff-box"}}
+  {{textarea value=newRiff.text placeholder="Type your riff here!" class="create-riff-box"}}
   <button class="btn btn-submit create-riff-btn">Riff</button>
 </form>
