stamp works, and in fact riffs can be created!
Apparently user flows in automatically, and adding stamp in the action
rather than building it with the object is the way to go. But hey! It
works!

--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -5,7 +5,7 @@
         </div>
         <div class="col-md-4">
           <div>
-            {{chat-box video=video currentTime=currentTime}}
+            {{chat-box video=video currentTime=currentTime createRiff='createRiff'}}
           </div>
         </div>
     </div>
