--- a/app/riff/template.hbs
+++ b/app/riff/template.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8">{{ember-youtube ytid=model.video.ytid timeChanged='timeChanged'}}</div>
+        <div class="col-md-8">{{ember-youtube startSeconds=model.stamp ytid=model.video.ytid timeChanged='timeChanged'}}</div>
         <div class="col-md-4">
           {{edit-riff-panel riff=model save='save' cancel='cancel' deleteRiff='deleteRiff'}}
         </div>
