--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -4,9 +4,8 @@
 
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav">
-        {{#if isAuthenticated}}
         <li>{{#link-to "users"}}Users{{/link-to}}</li>
-        {{/if}}
+        <li>{{#link-to "videos"}}Videos{{/link-to}}</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
