--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -7,7 +7,7 @@
         <li>{{#link-to "users"}}Users{{/link-to}}</li>
         <li>{{#link-to "videos"}}Videos{{/link-to}}</li>
       </ul>
-      <div class="col-sm-3 col-md-3">
+      <div class="col-sm-4 col-md-6 col-lg-7">
         {{youtube-finder changeVideo='changeVideo'}}
       </div>
       <ul class="nav navbar-nav navbar-right">
