prevent create-riff-btn from moving @ resize
2 media queries specifying that between md and lg, chat-box
has a specific width, and otherwise is a percentage minus the btn size

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,21 +13,34 @@ body {
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
   border: 1px solid gray;
-  height: 440px;
+  height: 325px;
   overflow: auto;
   padding: 2px;
   resize: both;
   width: 100%;
+
+  @media (max-width: 992px) {
+    width: 640px;
+  };
 }
 
 .create-riff-box {
   height: 33px;
-  margin-top: 1px;
-  width: 60%
+  margin-top: 2px;
+  width: calc(100% - 52.5px);
+
+  @media (max-width: 992px) {
+    width: calc(640px - 52.5px);
+  };
+
+  @media (max-width: 698px) {
+    width: calc(100% - 52.5px);
+  }
 }
 
 .create-riff-btn {
   margin-top: -25px;
+  position: relative;
 }
 
 .edit-riff-box {
