--- a/app/components/riff-component/template.hbs
+++ b/app/components/riff-component/template.hbs
@@ -1,3 +1,3 @@
 {{#if isDisplayed}}
-  {{riff.user.email}}: {{riff.text}} -- @{{riff.stamp}} seconds
+  {{riff.user.email}}: {{riff.text}} -- @{{stampTime}}
 {{/if}}
