--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 col-lg-7">
           {{ember-youtube ytid=video.ytid timeChanged='timeChanged'}}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-lg-5">
           <div>
             {{chat-box video=video currentTime=currentTime createRiff='createRiff'}}
           </div>
