--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,1 +1,1 @@
-{{video-deck video=model.firstObject changeVideo='changeVideo'}}
+{{video-deck video=model.firstObject changeVideo='changeVideo' createRiff='createRiff'}}
