add sorting functionality to chat-box
riffs now appear in order of stamp, thanks to Ember.computed.sort

--- a/app/components/chat-box/template.hbs
+++ b/app/components/chat-box/template.hbs
@@ -1,6 +1,6 @@
 <div class='chat-box'>
   <ol>
-    {{#each video.riffs as |riff|}}
+    {{#each sortedRiffs as |riff|}}
         {{riff-component riff=riff currentTime=currentTime}}
     {{/each}}
   </ol>
