--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,15 @@ body {
   background-color: rgb(241,241,241);
 }
 
+li {
+  margin-left: 0;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}​
+
 .cancel-riff-btn {
   height: 31px;
 }
