add hanging indent to riffs
currently 22px

--- a/app/components/chat-box/template.hbs
+++ b/app/components/chat-box/template.hbs
@@ -1,6 +1,6 @@
 <div class='chat-box'>
   {{#each sortedRiffs as |riff|}}
-      {{riff-component riff=riff currentTime=currentTime}}
+      <div class="one-riff">{{riff-component riff=riff currentTime=currentTime}}</div>
   {{/each}}
 </div>
 <form {{action 'createRiff' on='submit'}}>
