lighten timestamp on riffs

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -72,8 +72,12 @@ ul {
 }
 
 .one-riff {
-  padding-left: 22px ;
-  text-indent: -22px ;
+  padding-left: 22px;
+  text-indent: -22px;
+}
+
+.riff-stamp {
+  color: rgb(179, 179, 179)
 }
 
 .riff-user {
