--- a/app/components/riff-component/template.hbs
+++ b/app/components/riff-component/template.hbs
@@ -1,3 +1,3 @@
 {{#if isDisplayed}}
-  <span class="riff-user">{{riff.user.email}}</span>: {{riff.text}} -- @{{stampTime}}
+  <span class="riff-user">{{riff.user.email}}</span>: {{riff.text}} <span class="riff-stamp">-- @{{stampTime}}</span>
 {{/if}}
