change font-size on each riff
now a little bigger at 15px

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -72,12 +72,14 @@ ul {
 }
 
 .one-riff {
+  font-size: 15px;
+  margin-left: 5px;
   padding-left: 22px;
   text-indent: -22px;
 }
 
 .riff-stamp {
-  color: rgb(179, 179, 179)
+  color: rgb(179, 179, 179);
 }
 
 .riff-user {
