riffs now link to edit riff page
going to have to make sure they don't think they can edit them unless
it's their riff...

--- a/app/components/video-deck/template.hbs
+++ b/app/components/video-deck/template.hbs
@@ -5,7 +5,7 @@
         </div>
         <div class="col-md-4 col-lg-5">
           <div>
-            {{chat-box video=video currentTime=currentTime createRiff='createRiff'}}
+            {{chat-box video=video currentTime=currentTime createRiff='createRiff' clickRiff='clickRiff'}}
           </div>
         </div>
     </div>
