--- a/app/riff/template.hbs
+++ b/app/riff/template.hbs
@@ -1,12 +1,13 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8">{{ember-youtube startSeconds=model.stamp ytid=model.video.ytid timeChanged='timeChanged'}}</div>
-        <div class="col-md-4">
+        <div class="col-md-8 col-lg-7">
+          {{ember-youtube startSeconds=model.stamp ytid=model.video.ytid timeChanged='timeChanged'}}
+        </div>
+        <div class="col-md-4 col-lg-5">
+          <div>
           {{edit-riff-panel riff=model save='save' cancel='cancel' deleteRiff='deleteRiff'}}
         </div>
-    </div>
-    <div class="row"></div>
+      </div>
+  </div>
+  <div class="row"></div>
 </div>
-
-
-{{youtube-finder changeVideo='changeVideo'}}
