fix styling on submit button under edit riff panel
needed to prevent submit button from sticking out the right
side when window is medium, so copied css from chat-box

--- a/app/components/edit-riff-panel/template.hbs
+++ b/app/components/edit-riff-panel/template.hbs
@@ -1,4 +1,4 @@
-<form {{action 'save' on='submit'}}>
+<form class="edit-riff-panel" {{action 'save' on='submit'}}>
   {{textarea class="edit-riff-box" placeholder="Edit your riff here!" value=riff.text}}
   <button type="submit" class="btn btn-submit edit-riff-btn">Submit</button>
   <button {{action 'cancel'}} class='btn cancel-riff-btn'>Cancel</button>
