--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,13 @@
 @import 'bootstrap';
 @import 'bootstrap/theme';
 
+$background: rgb(241, 241, 241);
+$blue: #0000FF;
+$grey: #808080;
+$riff-time: rgb(179, 179, 179);
+
 body {
-  background-color: rgb(241,241,241);
+  background-color: $background;
 }
 
 li {
@@ -12,7 +17,7 @@ li {
 ul {
   list-style: none;
   padding-left: 0;
-}​
+}
 
 .cancel-riff-btn {
   height: 31px;
@@ -21,7 +26,7 @@ ul {
 .chat-box {
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
-  border: 1px solid gray;
+  border: 1px solid $grey;
   height: 325px;
   overflow: auto;
   padding: 2px;
@@ -59,7 +64,7 @@ ul {
 .edit-riff-box {
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
-  border: 1px solid gray;
+  border: 1px solid $grey;
   height: 282px;
   overflow: auto;
   padding: 2px;
@@ -107,11 +112,11 @@ ul {
 }
 
 .riff-stamp {
-  color: rgb(179, 179, 179);
+  color: $riff-time;
 }
 
 .riff-user {
-  color: blue;
+  color: $blue;
 }
 
 .search-box {
@@ -131,4 +136,8 @@ ul {
 
 .search-li {
   height: 50px;
+}
+
+.user-riff {
+  color: $blue;
 }
