--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -2,28 +2,25 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <ul class="nav nav-pills nav-stacked">
         <li>{{#link-to 'about'}}About us{{/link-to}}</li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="https://github.com/ioncrash/you-riff">See it on Github</a></li>
+
       </ul>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="#">Product for Mac</a></li>
-        <li><a href="#">Product for Windows</a></li>
+        <li>{{#link-to 'videos'}}Videos{{/link-to}}</li>
+        <li>{{#link-to 'users'}}Users{{/link-to}}</li>
+
       </ul>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="#">Web analytics</a></li>
-        <li><a href="#">Presentations</a></li>
-      </ul>
-    </div>
-    <div class="col-md-3">
-      <ul class="nav nav-pills nav-stacked">
-        <li><a href="#">Product Help</a></li>
-        <li><a href="#">Developer API</a></li>
+        <li><a href="https://www.linkedin.com/in/benjamin-gray
+">Visit My LinkedIn</a></li>
+        <li><a href="https://ioncrash.github.io/Portfolio/">Other Projects</a></li>
       </ul>
     </div>
   </div>
@@ -32,9 +29,7 @@
   <div class="row">
       <div class="col-lg-12">
           <ul class="nav nav-pills nav-justified">
-              <li><a href="/">© 2013 Company Name.</a></li>
-              <li><a href="#">Terms of Service</a></li>
-              <li><a href="#">Privacy</a></li>
+              <li><a href="/">© 2017 Ben Gray.</a></li>
           </ul>
       </div>
   </div>
