--- a/app/sign-in/template.hbs
+++ b/app/sign-in/template.hbs
@@ -1,3 +1,5 @@
-<h2>Sign In</h2>
+<div class="sign-in-wrap">
+  <h4>Sign In</h4>
 
-{{sign-in-form submit="signIn" reset="reset" credentials=model}}
+  {{sign-in-form submit="signIn" reset="reset" credentials=model}}
+</div>
