--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,12 @@ body {
   background-color: $background;
 }
 
+h4 {
+  margin-bottom: 20px;
+  margin-left: -15px;
+  margin-top: -10px;
+}
+
 li {
   margin-left: 0;
 }
@@ -140,6 +146,10 @@ ul {
 
 .search-li {
   height: 50px;
+}
+
+.sign-in-wrap {
+  margin: 100px;
 }
 
 .user-riff {
