--- a/app/change-password/template.hbs
+++ b/app/change-password/template.hbs
@@ -1,3 +1,5 @@
-<h2>Change Password</h2>
+<div class="change-password-form">
+  <h4>Change Password</h4>
 
-{{change-password-form submit="changePassword"}}
+  {{change-password-form submit="changePassword"}}
+</div>
