--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,6 +33,10 @@ ul {
   height: 31px;
 }
 
+.change-password-form {
+  margin: 100px;
+}
+
 .chat-box {
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
