--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -29,7 +29,7 @@
   <div class="row">
       <div class="col-lg-12">
           <ul class="nav nav-pills nav-justified">
-              <li><a href="/">© 2017 Ben Gray.</a></li>
+              <li><a href="/">© 2017 Ben Gray</a></li>
           </ul>
       </div>
   </div>
