--- a/app/components/youtube-finder/template.hbs
+++ b/app/components/youtube-finder/template.hbs
@@ -5,7 +5,7 @@
 
 <form class="navbar-form search-form" {{action 'changeVideo' on='submit'}}>
   <div class="input-group">
-    {{input size="80" type="text" value=url class="form-control search-box" placeholder="video url"}}
+    {{input size="80" type="text" value=url class="form-control search-box" placeholder="Add a video to our system (you must be signed in to do this)"}}
     <div class="input-group-btn">
       <button class="btn btn-default" type="submit">Go!</button>
     </div>
