--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -75,11 +75,15 @@ ul {
   position: relative;
 }
 
+.edit-email {
+  margin: -4px 0 6px 0;
+}
+
 .edit-riff-box {
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
   border: 1px solid $grey;
-  height: 282px;
+  height: 300px;
   overflow: auto;
   padding: 2px;
   resize: both;
