--- a/app/components/edit-riff-panel/template.hbs
+++ b/app/components/edit-riff-panel/template.hbs
@@ -1,5 +1,5 @@
 <form class="edit-riff-panel" {{action 'save' on='submit'}}>
-  <h4 class="edit-email">{{riff.user.email}}:</h4>
+  <h4 class="edit-email">{{riff.user.email}} @{{stampTime}}:</h4>
   {{textarea class="edit-riff-box" placeholder="Edit your riff here!" value=riff.text}}
   {{#if isUser}}
     <button type="submit" class="btn btn-submit edit-riff-btn">Submit</button>
