align youtube-finder field w/btn
a new class, a little margin-top, a little height

--- a/app/components/youtube-finder/template.hbs
+++ b/app/components/youtube-finder/template.hbs
@@ -7,7 +7,7 @@
   <div class="input-group">
     {{input size="80" type="text" value=url class="form-control search-box" placeholder="Add a video to our system (you must be signed in to do this)"}}
     <div class="input-group-btn">
-      <button class="btn btn-default" type="submit">Go!</button>
+      <button class="btn btn-default change-vid-btn" type="submit">Go!</button>
     </div>
   </div>
 </form>
