--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,6 +37,11 @@ ul {
   margin: 100px;
 }
 
+.change-vid-btn {
+  height: 40px;
+  margin-top: 3.8px;
+}
+
 .chat-box {
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
