--- a/app/components/chat-box/template.hbs
+++ b/app/components/chat-box/template.hbs
@@ -3,7 +3,8 @@
       <div class="one-riff">{{riff-component riff=riff currentTime=currentTime}}</div>
   {{/each}}
 </div>
+
 <form {{action 'createRiff' on='submit'}}>
-  {{textarea value=newRiff.text placeholder="Type your riff here!" class="create-riff-box"}}
-  <button class="btn btn-submit create-riff-btn">Riff</button>
+  {{textarea disabled=notAuthenticated value=newRiff.text placeholder="Type your riff here!" class="create-riff-box"}}
+  <button class="btn btn-submit create-riff-btn" disabled={{notAuthenticated}}>Riff</button>
 </form>
