change styling on chat-box and edit-box

--- a/app/about/template.hbs
+++ b/app/about/template.hbs
@@ -1,4 +1,4 @@
 <p class="about-us">You-Riff is a place where YouTube becomes more social and more informative. One of our favorite experiences is watching a film with a group of friends, sharing thoughts or cracking jokes at what's going on on the screen. You-Riff lets you do that virtually, without having to say "go to 4:31!" Just sign-up, add a video to our system, and get riffing!</p>
 
 
-{{outlet}}
+{{footer-comp}}
