--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid navbar-stuff">
     {{navbar-header}}
 
     <div class="collapse navbar-collapse" id="navigation">
